# sep-tools

./: .gitignore  LICENSE  README.md  feature_extraction.ipynb  justfile  pyproject.toml  values.yaml
opensearch/mappings/: sep_articles.json
src/: html_to_markdown.py  sep_crawler.py
