[tool.poetry]
name = "sep-tools"
version = "0.1.0"
description = "tools for using Stanford Encyclopedia of Philosophy effectively"
authors = ["lukaszdygon <ldygon94@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.12.1"
scikit-learn = "^1.5.1"
datefinder = "^0.7.3"
tqdm = "^4.66.4"
jupyter = "^1.0.0"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
